# maru

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  cloudbuild.yaml  package-lock.json  package.json  setup-script.sh
apps/agent/: Dockerfile  INSTRUCTIONS.md  pyproject.toml  template.py  test_agent.py
apps/agent/scripts/: generate_protocol.py
apps/agent/src/: __init__.py  agent.py
apps/agent/src/protocol/: __init__.py  agent_to_server.py  server_to_agent.py
apps/frontend/: .env.example  package.json
apps/frontend/app/: layout.tsx
apps/frontend/app/(home)/: page.tsx
apps/frontend/app/auth/: page.tsx
apps/frontend/components/: welcome-modal.tsx
apps/frontend/components/agent-environment/: agent-environment-context.tsx  agent-environment.tsx  editor.tsx  file-explorer.tsx
apps/frontend/components/claude-code/: cc-assistant-message.tsx  cc-messages.tsx  cc-system-message.tsx  cc-thinking-block.tsx  cc-todo-panel.tsx  cc-tool-use-block.tsx  cc-user-message.tsx  index.ts  types.ts
apps/frontend/components/layout/: modal-context.tsx
apps/frontend/components/sidebar/: agent-view.tsx  index.tsx  navigation.tsx  tasks-view.tsx
apps/frontend/contexts/: task-socket-context.tsx
apps/frontend/hooks/: use-user-settings.tsx
apps/frontend/hooks/session/: index.ts  (+1 more)
apps/frontend/lib/: api-key-validator.ts  constants.ts  make-backend-request.ts
apps/sandbox/: pyproject.toml  template.py
apps/server/: .env.example  Dockerfile  package.json
apps/server/scripts/: build.sh
apps/server/src/: app.ts  server.ts  socket.ts
scripts/: db-dev.sh
(+81 files in other folders)
